feat: harden det training reproducibility and readiness checks

--- a/docs/benchmarks/BASELINE_2026-02-07.md
+++ b/docs/benchmarks/BASELINE_2026-02-07.md
@@ -21,6 +21,22 @@ Result:
 - p95_ms: `879.6594`
 - throughput_per_sec: `1.1368`
 
+## Scenario: `train:train` (DET fixture)
+
+Command:
+
+```bash
+pocr benchmark run --scenario train:train \
+  -c assets/configs/local/train_bench_det_ci_fast.yml \
+  --warmup 0 --iterations 1 \
+  --report_json benchmark_results/baseline_train_det.json
+```
+
+Result:
+- avg_ms: `2749.9418`
+- p95_ms: `2749.9418`
+- throughput_per_sec: `0.36364`
+
 ## Scenario: `e2e:eval`
 
 Command:
